[tool.poetry]
name = "calitp-data-analysis"
version = "2023.2.9"
description = ""
authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
ipython = "^8.9.0"
siuba = "^0.4.2"
jinja2 = "<3.1.0"
calitp = "2023.2.9"
sqlalchemy-bigquery = "^1.6.1"
pandas-gbq = "^0.19.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
mypy = "^1.0.0"
hypothesis = "^6.68.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
