[tool.poetry]
name = "calitp-data-infra"
version = "2023.2.9"
description = ""
authors = ["Andrew Vaccaro <atvaccaro@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
calitp = "2023.2.9"
google-cloud-bigquery-storage = "2.14.1"
google-api-core = ">=1.32.0,<2.0.0dev"
tqdm = "^4.64.1"
typing-extensions = "^4.4.0"
pendulum = "^2.1.2"
humanize = "^4.6.0"
pydantic = "^1.10.4"
backoff = "^2.2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
mypy = "^1.0.0"
hypothesis = "^6.68.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
