[tool.poetry]
name = "calitp-data-infra"
version = "2023.2.13.1"
description = ""
authors = ["Andrew Vaccaro <andrew.v@jarv.us>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
# Some of these are pinned oddly to play nicely with Composer
pydantic = "~1.9"
google-cloud-bigquery-storage = "2.14.1"
tqdm = "^4.64.1"
pendulum = "^2.1.2"
humanize = "^4.6.0"
backoff = "^2.2.1"
google-api-core = ">=1.32.0,<2.0.0dev"
typing-extensions = ">=3.10.0.2"
calitp-data = "2023.2.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.0"
hypothesis = "^6.68.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
